--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 	<title>Git task</title>
   </head>
 <body>
-   <h1>Hello Alex!</h1>
-    <h1>Hello World!</h1>
-	 <h1>Hi World!</h1>
+   <h1>Hi World!</h1>
+  <ul>
+	<li>Sun1</li>
+	<li>Moon</li>
+	<li>Light</li>
+</ul>
 </body>
 </html>
