--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 <body>
     <h1>Hi Alex!</h1>
     <div>You are the best!</div>
-    <select>
-    </select>
    <select>
    <option value="1">One</option>
+   <option value="2">Two</option>
    </select>
 
 
